Fixes issue with Assignment setting not working correctly & responsive setting visibility

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,12 @@
   max-height: 0;
 }
 
+.hidden {
+  display: none;
+  opacity: 0;
+  max-height: 0;
+}
+
 #video-overlay {
   position: fixed;
   top: 0;
